--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<div class="postagem">
 					<h2>Titulo da postagem 1</h2>
 				    <span>postado em 20 de março 2022</span> 
-					<img src="imagem1.jpg" width="640px">
+					<img src="imagens/imagem1.jpg" width="640px">
 						ver since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 						<a href="">Leia mais</a>
 					</p>	
@@ -73,7 +73,7 @@
 				<div class="postagem">
 					<h2>Titulo da postagem 2</h2>
 				   <span>postado em 10 de março 2022</span> 
-					<img src="imagem2.jpg" width="640px">
+					<img src="imagens/imagem2.jpg" width="640px">
 						ver since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 						<a href="">Leia mais</a>
 				</div>
